added graph chart tests to visualize operation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ axum = { version = "0.7.5" }
 hyper = "1.2"
 lazy_static = { version = "1.4.0", optional = true }
 metrics = { version = "0.20", optional = true }
+plotters = "0.3.6"
+rand = "0.8"
 tokio = { version = "1", default-features = false, features = ["sync"] }
 tower = { version = "0.4", features = ["util"] }
 
