--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ exclude = ["metrics"]
 [dependencies]
 axum = { version = "0.7.5" }
 hyper = "1.2"
-lazy_static = { version = "1.4.0", optional = true }
+lazy_static = "1.4.0"
 metrics = { version = "0.20", optional = true }
 plotters = "0.3.6"
 rand = "0.8"
