--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,15 @@ keywords = ["hyper", "middleware", "load"]
 categories = ["network-programming"]
 
 [dependencies]
+arrayvec = "0.7.4"
 axum = { version = "0.7.5" }
+http = "1.1.0"
 hyper = "1.2"
 lazy_static = "1.4.0"
 rand = "0.8"
-tokio = { version = "1", default-features = false, features = ["sync"] }
+tokio = { version = "1", default-features = false, features = ["full"] }
 tower = { version = "0.4", features = ["util"] }
+uuid = { version = "1.8.0", features = ["v4"] }
 
 [dev-dependencies]
 plotters = "0.3.6"
