--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ tower = { version = "0.4", features = ["util"] }
 uuid = { version = "1.8.0", features = ["v4"] }
 
 [dev-dependencies]
+reqwest = "0.12.4"
 plotters = "0.3.6"
 dialoguer = "0.11"
 futures = "0.3"
