--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pathfinder-loadshedder"
-description = "URL latency-based load-shedding hyper/tower middleware"
+description = "URL path-based concurrecy load-shedding hyper/tower middleware"
 version = "0.0.1"
 license = "MIT OR Apache-2.0"
 edition = "2021"
@@ -9,30 +9,15 @@ keywords = ["hyper", "middleware", "load"]
 categories = ["network-programming"]
 
 [dependencies]
-arrayvec = "0.7.4"
 axum = { version = "0.7.5" }
-http = "1.1.0"
 hyper = "1.2"
 lazy_static = "1.4.0"
-rand = "0.8"
-tokio = { version = "1", default-features = false, features = ["full"] }
-tower = { version = "0.4", features = ["util"] }
-uuid = { version = "1.8.0", features = ["v4"] }
+tokio = { version = "1" }
+tower = { version = "0.4" }
 
 [dev-dependencies]
-reqwest = "0.12.4"
-plotters = "0.3.6"
-dialoguer = "0.11"
-futures = "0.3"
-http-body-util = "0.1.0"
-hyper = { version = "1.2", features = ["full"] }
-hyper-util = { version = "0.1.3", features = ["full"] }
-metrics = "0.20"
-metrics-exporter-prometheus = "0.13"
 rand = "0.8"
-structopt = "0.3"
-tokio = { version = "1", features = ["full"] }
-tower = "0.4"
+reqwest = "0.12.4"
 
 [features]
 default = []
